# CodingSnake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  config_example.cfg  cpp.md
include/: CodingSnake.hpp  common.hpp  config_parser.hpp  input.hpp  network.hpp  pathfinder.hpp  renderer.hpp  state.hpp  types.hpp  windows_fix.hpp
src/: common.cpp  config_parser.cpp  input.cpp  main.cpp  network.cpp  pathfinder.cpp  renderer.cpp
